# hashedcubes

./: .gitignore  CMakeLists.txt  README.md  csv.7z
WebContent/css/: styles.css
WebContent/js/: d3.tip.js  jquery-ui-1.11.4.min.js  leaflet-hashedcubes.js  loadmap.js  loadui.js
cpp-hashedcubes/: CMakeLists.txt  Types.cpp  cpp-hashedcubes.sln  cpp-hashedcubes.vcxproj  cpp-hashedcubes.vcxproj.filters  stdafx.h
cpp-hashedcubes/WebContent/: index.html
cpp-hashedcubes/WebContent/js/: global.js  histogram.js  jquery-dateFormat.min.js  jquery.jqGrid.min.js  leaflet-hashedcubes.js  leaflet-src.js  linechart.js  loadmap.js  scatterchart.js  sql.js  view_schemas.js
cpp-hashedcubes/csv/: brightkite-region.csv  flights-region.csv  flights-tile.csv  gowalla-region.csv  gowalla-tile.csv  twitter-region.csv  twitter-tile.csv
cpp-hashedcubes/include/SQLiteCpp/: Backup.h  Column.h  Database.h  Statement.h
cpp-hashedcubes/include/meerkat/: meerkat.c
cpp-hashedcubes/include/rapidjson/: rapidjson.h
cpp-hashedcubes/lib/_x64/: libboost_chrono-vc140-mt-1_59.lib  libboost_chrono-vc140-mt-gd-1_59.lib  libboost_filesystem-vc140-mt-1_59.lib  libboost_iostreams-vc140-mt-1_59.lib  libboost_iostreams-vc140-mt-gd-1_59.lib  libboost_system-vc140-mt-1_59.lib  libboost_system-vc140-mt-gd-1_59.lib  stxxl.lib
cpp-hashedcubes/src/: CategoricalNode.cpp  CategoricalNode.h  CategoricalPivot.h  CategoricalSerializer.cpp  CategoricalSerializer.h  Data.cpp  DataGenerator.h  DataLoader.cpp  DataLoader.h  Date.h  FlightsDelayLoader.h  FlightsLoader.h  FlightsPerformanceLoader.cpp  HashedCube.cpp  HashedCube.h  HashedCubeInstances.cpp  Hashing.h  InMemoryData.cpp  Mercator.h  MySQLSerializer.cpp  MySQLSerializer.h  Nanocubes.h  Pivot.h  Query.cpp  Query.h  StringUtil.cpp  StringUtil.h  TemporalInterval.h  TemporalNode.h  TemporalSerializer.cpp  TileNode.cpp  TileNode.h  TilePivot.h  TripLoader.h  Trunc.h  TwitterSQL.h  Types.cpp  Types.h  main.cpp
cpp-hashedcubes/xml/: brightkite-immens.xml  brightkite-nanocubes.xml  flights-delay.xml  flights-performance.xml  flights.xml  gowalla.xml  snap.xml  splom-10.xml  splom-20.xml  splom-30.xml  splom-40.xml  splom-50.xml  trips_green-small.xml  trips_green.xml  trips_yellow-small.xml  trips_yellow.xml  twitter-mysql-small.xml  twitter-mysql.xml  twitter-small.xml  twitter.xml
include/boost/serialization/: tuple.hpp
include/meerkat/: meerkat.h
src/: CategoricalDimension.cpp  CategoricalDimension.h  DMPLoader.cpp  DMPLoader.h  Data.h  FlightsDelayLoader.cpp  FlightsPerformanceLoader.h  HashedCubeInstances.h  InMemoryData.h  InMemoryDataDescriptor.h  InMemoryDataGenerator.cpp  InMemoryDataGenerator.h  Mercator.h  Query.h  ResidentSetSize.h  Response.h  SQLData.cpp  SQLData.h  ScatterSerializer.cpp  ScatterSerializer.h  Serializer.h  Server.cpp  Server.h  SnapLoader.cpp  SnapLoader.h  SpatialDimension.cpp  SpatialDimension.h  SpatialSerializer.cpp  SpatialSerializer.h  SplomLoader.cpp  SplomLoader.h  TemporalDimension.cpp  TemporalDimension.h  TemporalNode.cpp  TemporalPivot.h  TemporalSerializer.h  TripLoader.cpp  TwitterSQL.h  Types.h  main.cpp  (+2 more)
xml/: brightkite-immens.xml  brightkite-nanocubes.xml  gowalla.xml
